--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-1. run the experiment on several hyperparameters:
+1. run the experiment on several hyperparameters (experiment format: {score_threshold}_{embedding_method}_{clustering_method}.png):
     a. change score - try 0.6, 0.7, 0.8 ...
     b. use different clustering methodologies - tsne, LDA (?)
 2. think how to evaluate the results
